# Hy-MT2-orangepi

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md
bench/: bench_decode.cpp  bench_lm_head.cpp  bench_matmul_throughput.cpp  bench_prefill.cpp
scripts/: build.sh  fetch_model.sh  install_custom_ops.sh  set_env.sh
src/csrc/custom_ops/: CMakePresets.json  build.sh  rms_norm128_custom.json  rms_norm2048_custom.json  rope_full_custom.json
src/csrc/custom_ops/cmake/: device_task.cmake  func.cmake  makeself.cmake
src/csrc/custom_ops/cmake/util/: ascendc_bin_param_build.py  ascendc_compile_kernel.py  ascendc_gen_options.py  ascendc_gen_static_library.py  ascendc_gen_vendor_cmake.py  ascendc_get_op_name.py  ascendc_impl_build.py  ascendc_pack_opregistry.py  opdesc_parser.py  preset_parse.py
src/csrc/custom_ops/cmake/util/makeself/: README.md  make-release.sh  makeself-header.sh  makeself.1  makeself.sh
src/csrc/custom_ops/op_host/: CMakeLists.txt  rms_norm128_custom.cpp  rms_norm128_custom_tiling.h  rms_norm2048_custom.cpp  rms_norm2048_custom_tiling.h  rope_full_custom.cpp  rope_full_custom_tiling.h
src/csrc/custom_ops/op_kernel/: rms_norm128_custom.cpp  rms_norm2048_custom.cpp  rope_full_custom.cpp
src/csrc/custom_ops/scripts/: help.info
src/csrc/include/hy_mt2/: acl_context.h  decoder_layer.h  language_model.h  ops.h  tensor.h  tokenizer.h  translator.h  weights.h
src/csrc/lib/: acl_context.cpp  decoder_layer.cpp  language_model.cpp  ops.cpp  tensor.cpp  tokenizer.cpp  translator.cpp  weights.cpp
src/csrc/tools/: hy_mt2_translate.cpp
tests/: test_decoder_layer.cpp  test_language_model.cpp  test_matmul_cube.cpp  test_ops_baseline.cpp  test_smoke.cpp  test_tokenizer.cpp  test_weights_load.cpp
